# Master_project

./: .gitignore  Makefile  README.md  RunCalibration.py  Video.py  calibration.py  config.ini  main.py  project.py  questions  stereo_calib_data.npz  tests
ros2_fortress_ws/: CMakeLists.txt  grader commands  package.xml  ros_ws_issues  setup.py
ros2_fortress_ws/config/: initial_link_poses.py
ros2_fortress_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_fortress_ws/install/ros2_fortress_ws/share/ros2_fortress_ws/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_fortress_ws/install/ros2_fortress_ws/share/ros2_fortress_ws/models/: BladeMount.stl  Discs.stl  EngineParts.stl  FrontAxle.stl  Glass.stl  Grader.dev  Grader.geo  Grader.kin  GraderBlade.stl  GraderBladeWear.stl  MainFrame.stl  model.config
ros2_fortress_ws/install/ros2_fortress_ws/share/ros2_fortress_ws/worlds/: callibration.sdf
ros2_fortress_ws/launch/: launch_sim.py
ros2_fortress_ws/log/: latest_build
ros2_fortress_ws/models/Grader/: Grader.avo  Grader.sen  model.sdf
ros2_fortress_ws/models/Grader/Geometry/: AdjustBladeHydraulics.stl  BladeFrame.stl  BladeFrameRot.stl  BladeLeverMount.stl  Booth.stl  BoothCap.stl  Engine.stl  Interior.stl  Panel.stl  Tires.stl
ros2_fortress_ws/resource/: ros2_fortress_ws
ros2_fortress_ws/ros2_fortress_ws/: pose_frame_publisher.py
ros2_fortress_ws/scripts/: helper_functions.py  images_to_mp4.py  plot_camera_vs_gz.py  plot_joint_state.py  record_state_and_camera.py
ros2_fortress_ws/test_data/test_new_camera_placement/: camera_placement
ros2_fortress_ws/worlds/: callibration_video_recorder.py  callibration_world.sdf  empty.sdf
src/camera_calibration/: CaptureVideo.py  calib_data.npz  calibration.py  camera_calibration_flow.md  (+3 more)
(+52 files in other folders)
